--- a/Final Project Precis.Rmd
+++ b/Final Project Precis.Rmd
@@ -13,11 +13,23 @@ library(janitor)
 ```
 
 ```{r}
-expenditures <- read_excel("nominal_expenditures.xlsx", skip = 4) %>%
-  clean_names()
+expenditures <- read_excel("./data/nominal_expenditures.xlsx", skip = 4) %>%
+  clean_names() %>%
+  head(21)
 
-expenditures_no_taxes_tips <- read_excel("nominal_expenditures_no_taxes_tips.xlsx", skip = 4) %>%
-  clean_names()
+expenditures_no_taxes_tips <- read_excel("./data/nominal_expenditures_no_taxes_tips.xlsx", skip = 4) %>%
+  clean_names() %>%
+  head(21)
+
+expenditures_alcohol <- expenditures %>%
+     select(year, drinking_places, hotels_and_motels, liquor_stores, eating_and_drinking_places)
+   
+expenditures_nt_alcohol <- expenditures_no_taxes_tips %>%
+    select(year, drinking_places, hotels_and_motels, liquor_stores, eating_and_drinking_places)
+
+expenditures_nt_alcohol %>%
+  ggplot(aes(x = year, y = hotels_and_motels)) + geom_point() + geom_smooth()
+
 ```
  
 This data set is from the USDA's current food expenditures series. I plan to run analysis on certain variables, like expenditure at grocery stores, gas stations, etc., to assess the changes in spending on food and alcohol in different capacities. I have worked with consumer trends in the context of professional athletics, and I am interested in using this data to draw conclusions about more day-to-day consumer behaviors.
