--- a/Final Project Data.Rmd
+++ b/Final Project Data.Rmd
@@ -58,14 +58,62 @@ indiv_tips_taxes <- left_join(tips_taxes_total, population, by = "year") %>%
          indiv_t_school = t_school/pop) %>%
   select(year, indiv_t_grocery, indiv_t_conv, indiv_t_mass, indiv_t_mail, indiv_t_home, indiv_t_rest, indiv_t_hotel, indiv_t_school)
 
-ggplot(indiv_tips_taxes, aes(x = year, y = indiv_t_mail)) + geom_point() + geom_smooth()
 
+```
+
+
+```{r}
+#Food availability 
+
+chicken <- read_excel("chicken.xlsx")
+
+dairy <- read_excel("dairy.xlsx")
+
+fish <- read_excel("fish.xlsx")
+
+fruitveg <- read_excel("fruitveg.xlsx")
+
+grain <- read_excel("grain.xlsx")
+
+nuts <- read_excel("nuts.xlsx")
+
+sweet <- read_excel("sweeteners.xlsx")
+
+red_meat <- read_excel("red_meat.xlsx")
+
+x <- left_join(chicken, dairy, by = "year")
+
+y <- left_join(x, fish, by = "year")
+
+z <- left_join(y, fruitveg, by = "year")
+
+g <- left_join(z, grain, by = "year")
+
+n <- left_join(g, nuts, by = "year")
+
+r <- left_join(n, red_meat, by = "year")
+
+# Total availability 
+availability <- left_join(r, sweet, by = "year") %>%
+  rename(retail_chicken = retail_availability,
+         total_canned_dairy = total_canned.x,
+         total_frozen_dairy = total_frozen,
+         total_fresh_frozen_fish = total_fresh_frozen,
+         indiv_fresh_frozen_fish = indiv_fresh_frozen,
+         total_canned_fish = total_canned.y,
+         indiv_canned_fish = indiv_canned,
+         total_peanuts = total,
+         retail_meat = total_retail,
+         indiv_meat = indiv_retail)
+
+indiv_availability <- availability %>%
+  select(year, retail_chicken, milk_cream, butter, total_cheese, total_frozen_dairy, total_canned_dairy, total_dry, indiv_fresh_frozen_fish, indiv_canned_fish, indiv_cured, indiv_fish_shell, fresh_fruit, processed_fruit, fresh_veg, processed_veg, total_wheat_flour, oat, snack_peanuts, peanut_butter, peanut_candy, total_peanuts, indiv_meat, total_sweeteners)
 ```
 
 
 
 ```{r}
-#Food 
+#Food expenditure locations
 food <- expenditures %>%
   select(year, grocery_stores, convenience_stores, mass_merchandisers, mail_order_and_home_delivery, home_production_and_donations, full_service_restaurants, hotels_and_motels, schools_and_colleges)
 
@@ -92,8 +140,6 @@ indiv_food_no_t <- left_join(food_no_taxes_tips, population, by = "year") %>%
          indiv_rest = full_service_restaurants/pop,
          indiv_hotel = hotels_and_motels/pop, 
          indiv_school = schools_and_colleges/pop)
-
-ggplot(indiv_food_no_t, aes(x = year, y = indiv_mass)) + geom_point() + geom_smooth()
 ```
 
 
@@ -110,7 +156,6 @@ total_indiv <- exp_pop %>%
          total_alcohol = indiv_aah + indiv_aafh) %>%
   select(year, indiv_fah, indiv_fafh, total_food, indiv_aah, indiv_aafh, total_alcohol)
 
-ggplot(total_indiv, aes(x = year, y = indiv_fafh)) + geom_point()
 ```
 
 
@@ -126,5 +171,19 @@ write_rds(food, path = "final-app/food.rds")
 write_rds(indiv_tips_taxes, path = "final-app/indiv_tips_taxes.rds")
 
 write_rds(indiv_food, path = "final-app/indiv_food.rds")
+```
+
+```{r}
+write_rds(expenditures, path = "final-app-barplot/expenditures.rds")
+
+write_rds(expenditures_no_taxes_tips, path = "final-app-barplot/expenditures_no_taxes_tips.rds")
+
+write_rds(total_indiv, path = "final-app-barplot/total_indiv.rds")
+
+write_rds(food, path = "final-app-barplot/food.rds")
+
+write_rds(indiv_tips_taxes, path = "final-app-barplot/indiv_tips_taxes.rds")
+
+write_rds(indiv_food, path = "final-app-barplot/indiv_food.rds")
 ```
 
