--- a/Final Project Data.Rmd
+++ b/Final Project Data.Rmd
@@ -16,7 +16,7 @@ library(janitor)
 ```{r}
 # I decided to do my data cleaning in an R markdown instead of an R script because it helps me to visually organize each of my data frames, joins, etc. 
 
-# This chunk of data gathering/cleaning is dedicated to food expenditures. 
+# This chunk of code is dedicated to gathering/cleaning data on food expenditures. 
 
 # USDA data on total nominal food and alcohol expenditures by purchasing location in the U.S from: 
 # https://www.ers.usda.gov/data-products/food-expenditure-series/ . 
@@ -59,7 +59,7 @@ indiv_food <- left_join(food, population, by = "year") %>%
 
 
 ```{r}
-# This chunk of data gathering/cleaning is dedicated to food availability. 
+# This chunk of code is dedicated to gathering/cleaning data on food availability. 
 
 # I gathered the USDA's data on different categories of food availability. 
 # Because they were very strangely formatted when I downloaded the excel files, I did a little bit of cleaning in the excel files themselves before uploading them to R. 
